--- a/Coding_Challenge1/package.json
+++ b/Coding_Challenge1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ranellereyes/Algorithms/issues"
   },
-  "homepage": "https://github.com/ranellereyes/Algorithms#readme"
+  "homepage": "https://github.com/ranellereyes/Algorithms#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
+  }
 }
